Scrollbar fix.

--- a/assets/furllery.css
+++ b/assets/furllery.css
@@ -134,7 +134,7 @@
   display: none;
 }
 .df-furllery-gallery-wrapper .df-furllery-header {
-  width: calc(100% - 205px);
+  width: calc(100% - 210px);
   height: 100px;
   position: absolute;
   top: 0;
@@ -177,7 +177,7 @@
 }
 
 .df-furllery-gallery-wrapper .df-furllery-preview {
-  width: calc(100% - 205px);
+  width: calc(100% - 210px);
   height: calc(100% - 200px);
   position: absolute;
   bottom: 100px;
@@ -245,7 +245,7 @@
 .df-furllery-gallery-wrapper .df-furllery-aside {
   background-color: rgba(12, 12, 12, 0.52);
 
-  width: 205px;
+  width: 210px;
   height: 100%;
   position: absolute;
   right: 0;
@@ -274,13 +274,14 @@
   background-color: #f3f4f5;
   transition: all .2s;
 }
-.df-furllery-gallery-wrapper .df-furllery-aside .df-furllery-panel-thumbnail:last-child {
+.df-furllery-gallery-wrapper .df-furllery-aside .df-furllery-panel-thumbnail:nth-child(odd):last-child {
   margin-right: auto;
+  margin-left: 3px;
 }
 .df-furllery-gallery-wrapper .df-furllery-aside .df-furllery-panel-thumbnail:nth-child(odd) {
   margin-right: 10px;
 }
-.df-furllery-gallery-wrapper .df-furllery-aside .df-furllery-panel-thumbnail:active,
+.df-furllery-gallery-wrapper .df-furllery-aside .df-furllery-panel-thumbnail.active,
 .df-furllery-gallery-wrapper .df-furllery-aside .df-furllery-panel-thumbnail:hover {
   background-color: orangered;
   cursor: pointer;
@@ -293,7 +294,7 @@
 }
 
 .df-furllery-gallery-wrapper .df-furllery-footer {
-  width: calc(100% - 205px);
+  width: calc(100% - 210px);
   height: 100px;
   position: absolute;
   bottom: 0;
@@ -334,6 +335,7 @@
     justify-content: center;
   }
 
+  .df-furllery-gallery-wrapper .df-furllery-aside .df-furllery-panel-thumbnail:nth-child(odd):last-child,
   .df-furllery-gallery-wrapper .df-furllery-aside .df-furllery-panel-thumbnail:nth-child(odd) {
     margin-right: 0;
   }
